[gd_scene load_steps=12 format=3 uid="uid://ci8h3yqpc5swd"]

[ext_resource type="Texture2D" uid="uid://dhc3h3ue4ayap" path="res://assets/gamesprites/enemies/squirrel_sheet.png" id="1_jcrg3"]
[ext_resource type="Script" path="res://scripts/enemies/squirrel.gd" id="1_ocy11"]
[ext_resource type="Resource" uid="uid://cyt61rr172ekk" path="res://resources/squirrel_parabolic.tres" id="2_53bcw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3vfpo"]
atlas = ExtResource("1_jcrg3")
region = Rect2(0, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmy4r"]
atlas = ExtResource("1_jcrg3")
region = Rect2(0, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh166"]
atlas = ExtResource("1_jcrg3")
region = Rect2(0, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ui3mi"]
atlas = ExtResource("1_jcrg3")
region = Rect2(0, 156, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixvjh"]
atlas = ExtResource("1_jcrg3")
region = Rect2(0, 208, 52, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_vwjxp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vfpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmy4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh166")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ui3mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixvjh")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y230y"]
size = Vector2(127, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bwv1"]
size = Vector2(132, 53)

[node name="Squirrel" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 12
script = ExtResource("1_ocy11")
parabolic_stat = ExtResource("2_53bcw")

[node name="SquirrelSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-99, -141)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_vwjxp")
autoplay = "default"
frame_progress = 0.0333864
centered = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(73.5, 88.5)
shape = SubResource("RectangleShape2D_y230y")

[node name="WallDetector" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
position = Vector2(74, 85.5)
shape = SubResource("RectangleShape2D_7bwv1")
debug_color = Color(0.732743, 0.447599, 0.40903, 0.42)

[node name="WallCooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="WallDetector" to="." method="_on_wall_detector_body_entered"]
[connection signal="timeout" from="WallCooldown" to="." method="_on_wall_cooldown_timeout"]
